translation-tool/inputs/source_meta/objects/YAHS_RIAPriorityMapping__c.object
<CustomObject>
    <fields>
        <fullName>YAHS_Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>YAHS_ActualIssue__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activate service</fullName>
                </value>
                <value>
                    <fullName>Adjustments not applied</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Customer Education</fullName>
                </value>
                <value>
                    <fullName>Customer Issue</fullName>
                </value>
                <value>
                    <fullName>De-install Equipment</fullName>
                </value>
                <value>
                    <fullName>Dispatch Tech</fullName>
                </value>
                <value>
                    <fullName>Educated Customer</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Escalated to Hughes</fullName>
                </value>
                <value>
                    <fullName>Escalated to SIC</fullName>
                </value>
                <value>
                    <fullName>Escalated to Supervisor</fullName>
                </value>
                <value>
                    <fullName>Give Courtesy Token(s)</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Inform management Customer Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Inform management Field Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Install - Escalate</fullName>
                </value>
                <value>
                    <fullName>Install - Updated</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Not located</fullName>
                </value>
                <value>
                    <fullName>Not Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YAHS_ActualIssue__c</fullName>
        <label>Actual Issue</label>
        <type>Picklist</type>
       <valueSet>
            <controllingField>YAHS_CustomerRequestType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Account Issue</fullName>
                </value>
                <value>
                    <fullName>Account Name (Misspelling)</fullName>
                </value>
                <value>
                    <fullName>Account Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Activate new service</fullName>
                </value>
                <value>
                    <fullName>Agent Callback</fullName>
                </value>
                <value>
                    <fullName>Amount Due</fullName>
                </value>
				<value>
                    <fullName>Appeal/Escalation Status</fullName>
                </value>
                <value>
                    <fullName>API - FAP Token</fullName>
                </value>
                <value>
                    <fullName>API - Order</fullName>
                </value>
                <value>
                    <fullName>Application access issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - hughes</fullName>
                </value>
                <value>
                    <fullName>Application Questions</fullName>
                </value>
                <value>
                    <fullName>Application Slow response times</fullName>
                </value>
                <value>
                    <fullName>Application System Error</fullName>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Automated Call - Activation</fullName>
                </value>
                <value>
                    <fullName>Available schedule</fullName>
                </value>
                <value>
                    <fullName>Bad Cables/Wiring</fullName>
                </value>
                <value>
                    <fullName>Bad Modem</fullName>
                </value>
                <value>
                    <fullName>Bad Radio</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - CSR</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - Technical</fullName>
                </value>
                <value>
                    <fullName>Bad website</fullName>
                </value>
                <value>
                    <fullName>Bad website/url</fullName>
                </value>
                <value>
                    <fullName>Bank Strike</fullName>
                </value>
                <value>
                    <fullName>Bill Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YAHS_CasePriority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YAHS_CustomerRequestType__c</fullName>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
         <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acquisition Information</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Billing/Invoicing</fullName>
                </value>
                <value>
                    <fullName>Billing Info</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Recording</fullName>
                </value>
                <value>
                    <fullName>Cancel - Change of Address</fullName>
                </value>
                <value>
                    <fullName>Cancel - Competition</fullName>
                </value>
                <value>
                    <fullName>Cancel - Financial</fullName>
                </value>
                <value>
                    <fullName>Cancellation Information</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel - Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Cancel - Sales Practices</fullName>
                </value>
                <value>
                    <fullName>Cancel Service</fullName>
                </value>
                <value>
                    <fullName>Cancel - Technical</fullName>
                </value>
                <value>
                    <fullName>Cancel - Treatment</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Connect to Wi-Fi Booster</fullName>
                </value>
                <value>
                    <fullName>Cannot find Wi-Fi Network</fullName>
                </value>
                <value>
                    <fullName>Cannot Login</fullName>
                </value>
                <value>
                    <fullName>Cannot Receive Emails</fullName>
                </value>
                <value>
                    <fullName>Cannot Send Emails</fullName>
                </value>
                <value>
                    <fullName>Care Operations</fullName>
                </value>
                <value>
                    <fullName>Change Due Date - Temporary</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Change Payment Type</fullName>
                </value>
                <value>
                    <fullName>Change Service Plan</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Collect Payment</fullName>
                </value>
            </valueSetDefinition>
            </valueSet>
    </fields>
    <fields>
        <fullName>YAHS_EffectiveDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YAHS_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YAHS_casePriorityKey__c</fullName>
        <formula>TEXT(YAHS_CustomerRequestType__c)+&apos;#&apos;+TEXT(YAHS_ActualIssue__c)+&apos;#&apos;+TEXT(YAHS_Action__c)</formula>
        <label>casePriorityKey</label>
        <type>Text</type>
    </fields>
    <label>RIA-Priority Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>YAHS_CasePriority__c</columns>
        <columns>YAHS_CustomerRequestType__c</columns>
        <columns>YAHS_ActualIssue__c</columns>
        <columns>YAHS_Action__c</columns>
        <columns>YAHS_casePriorityKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPA-{0000}</displayFormat>
        <label>RIA-Priority Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RIA-Priority Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>Expiry Date cannot be set in past and cannot be less than the effective date</description>
        <errorConditionFormula>OR(YAHS_ExpiryDate__c &lt; TODAY(),YAHS_ExpiryDate__c&lt;YAHS_EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>YAHS_ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>